assert and othersq